--- a/ForumDImage/ForumDImage/ForumDImage.csproj
+++ b/ForumDImage/ForumDImage/ForumDImage.csproj
@@ -112,6 +112,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505161933059_init.cs" />
+    <Compile Include="Migrations\201505161933059_init.Designer.cs">
+      <DependentUpon>201505161933059_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BddContext.cs" />
     <Compile Include="Models\Dal.cs" />
     <Compile Include="Models\Photo.cs" />
@@ -138,6 +143,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201505161933059_init.resx">
+      <DependentUpon>201505161933059_init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
