--- a/ForumDImage/ForumDImage/ForumDImage.csproj
+++ b/ForumDImage/ForumDImage/ForumDImage.csproj
@@ -28,6 +28,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -109,19 +110,30 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\InscriptionController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ZoneClientsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201505161933059_init.cs" />
-    <Compile Include="Migrations\201505161933059_init.Designer.cs">
-      <DependentUpon>201505161933059_init.cs</DependentUpon>
+    <Compile Include="Migrations\201505162027451_init.cs" />
+    <Compile Include="Migrations\201505162027451_init.Designer.cs">
+      <DependentUpon>201505162027451_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505200318109_photosModifies.cs" />
+    <Compile Include="Migrations\201505200318109_photosModifies.Designer.cs">
+      <DependentUpon>201505200318109_photosModifies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505200344196_votesAjoutes.cs" />
+    <Compile Include="Migrations\201505200344196_votesAjoutes.Designer.cs">
+      <DependentUpon>201505200344196_votesAjoutes.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BddContext.cs" />
     <Compile Include="Models\Dal.cs" />
     <Compile Include="Models\Photo.cs" />
     <Compile Include="Models\Utilisateur.cs" />
+    <Compile Include="Models\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -134,6 +146,8 @@
     <Content Include="Views\Inscription\Success.cshtml" />
     <Content Include="Views\Inscription\Lister.cshtml" />
     <Content Include="Views\Inscription\ErreurInscription.cshtml" />
+    <Content Include="Views\ZoneClients\Index.cshtml" />
+    <Content Include="Views\ZoneClients\PublierPhoto.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -146,8 +160,14 @@
     <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201505161933059_init.resx">
-      <DependentUpon>201505161933059_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201505162027451_init.resx">
+      <DependentUpon>201505162027451_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505200318109_photosModifies.resx">
+      <DependentUpon>201505200318109_photosModifies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505200344196_votesAjoutes.resx">
+      <DependentUpon>201505200344196_votesAjoutes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
