--- a/ForumDImage/ForumDImage/ForumDImage.csproj
+++ b/ForumDImage/ForumDImage/ForumDImage.csproj
@@ -45,6 +45,9 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FileTypeDetective">
+      <HintPath>..\packages\FileTypeDetective.1.0.0.0\lib\net40\FileTypeDetective.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -100,6 +103,8 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -126,6 +131,14 @@
     <Compile Include="Migrations\201505200344196_votesAjoutes.Designer.cs">
       <DependentUpon>201505200344196_votesAjoutes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505211456287_votesAjoutes1.cs" />
+    <Compile Include="Migrations\201505211456287_votesAjoutes1.Designer.cs">
+      <DependentUpon>201505211456287_votesAjoutes1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505211508008_tableVotesnomee.cs" />
+    <Compile Include="Migrations\201505211508008_tableVotesnomee.Designer.cs">
+      <DependentUpon>201505211508008_tableVotesnomee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BddContext.cs" />
     <Compile Include="Models\Dal.cs" />
@@ -148,6 +161,7 @@
     <Content Include="Views\Inscription\ErreurInscription.cshtml" />
     <Content Include="Views\ZoneClients\Index.cshtml" />
     <Content Include="Views\ZoneClients\PublierPhoto.cshtml" />
+    <Content Include="Views\ZoneClients\getNbVotes.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -168,6 +182,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505200344196_votesAjoutes.resx">
       <DependentUpon>201505200344196_votesAjoutes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505211456287_votesAjoutes1.resx">
+      <DependentUpon>201505211456287_votesAjoutes1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505211508008_tableVotesnomee.resx">
+      <DependentUpon>201505211508008_tableVotesnomee.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
