--- a/ForumDImage/ForumDImage/ForumDImage.csproj
+++ b/ForumDImage/ForumDImage/ForumDImage.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Models\Vote.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="ViewModels\UserValidationModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -162,6 +163,7 @@
     <Content Include="Views\ZoneClients\Index.cshtml" />
     <Content Include="Views\ZoneClients\PublierPhoto.cshtml" />
     <Content Include="Views\ZoneClients\getNbVotes.cshtml" />
+    <Content Include="Views\ZoneClients\ModifierUtilisateur.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -171,7 +173,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201505162027451_init.resx">
