--- a/ForumDImage/ForumDImage/packages.config
+++ b/ForumDImage/ForumDImage/packages.config
@@ -11,4 +11,6 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
+  <package id="Portable.Licensing" version="1.1.0" targetFramework="net45" />
+  <package id="T4MVCExtensions" version="3.6.5" targetFramework="net45" />
 </packages>
