Commit de sécurité

--- a/ForumDImage/ForumDImage/ForumDImage.csproj
+++ b/ForumDImage/ForumDImage/ForumDImage.csproj
@@ -161,6 +161,10 @@
     <Compile Include="Migrations\201505260223575_imageDisplayName.Designer.cs">
       <DependentUpon>201505260223575_imageDisplayName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505261928386_strLenPhotos.cs" />
+    <Compile Include="Migrations\201505261928386_strLenPhotos.Designer.cs">
+      <DependentUpon>201505261928386_strLenPhotos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BddContext.cs" />
     <Compile Include="Models\Dal.cs" />
@@ -220,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505260223575_imageDisplayName.resx">
       <DependentUpon>201505260223575_imageDisplayName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505261928386_strLenPhotos.resx">
+      <DependentUpon>201505261928386_strLenPhotos.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
